Fix problems launching playground

--- a/playground/index.html
+++ b/playground/index.html
@@ -19,5 +19,6 @@
 
   <body>
     <app>Loading AppComponent content here ...</app>
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA_MjsJsFXS6NjD3_0eS2UTqM3TW6NTVI8&libraries=places"></script>
   </body>
 </html>
