--- a/src/autocomplete-places/autocomplete-places.html
+++ b/src/autocomplete-places/autocomplete-places.html
@@ -5,7 +5,7 @@
     [matAutocomplete]="matAutocomplete"
     (blur)="actionBuffer.emit('blur')"
     [formControl]="autocompleteCtrl"
-    [placeholder]="displayName || 'PEOPLE.ADDRESS' | translate"
+    [placeholder]="displayName || 'Address'"
   >
 </mat-input-container>
 
