--- a/src/sidenav/sidenav-list-item/sidenav-list-item.html
+++ b/src/sidenav/sidenav-list-item/sidenav-list-item.html
@@ -2,6 +2,6 @@
   (click)="handleClick($event)"
   class="app-link"
 >
-  <i class="material-icons app-link-icon">{{ icon }}</i>
+  <i class="material-icons app-link-icon" aria-hidden="true">{{ icon }}</i>
   <div class="app-link-text">{{ description }}</div>
 </a>
