--- a/src/sidenav/sidenav-header/sidenav-header.html
+++ b/src/sidenav/sidenav-header/sidenav-header.html
@@ -3,17 +3,19 @@
     <div
       routerLink="/profile"
       class="user-picture-container"
+      tabindex="0"
+      attr.aria-label="{{ 'PEOPLE.VIEW_PROFILE' | translate }}"
     >
       <i class="material-icons circle">account_circle</i>
     </div>
     <div class="user-info-container">
       <div class="user-name-container">
-        <div class="name">
+        <div class="name" tabindex="0">
           {{ title }}
         </div>
         <!-- <i class="material-icons name-dropdown">arrow_drop_down</i> -->
       </div>
-      <div class="position">{{ subtitle }}</div>
+      <div class="position" tabindex="0">{{ subtitle }}</div>
     </div>
   </div>
 </div>
