Reverting commit e3be91e 7ddd45f

--- a/src/expandable-fab/expandable-fab-item.html
+++ b/src/expandable-fab/expandable-fab-item.html
@@ -3,7 +3,7 @@
   [attr.href]="href"
   ignA11yClick
   (click)="this.clicked.emit()"
-  aria-label="{{ tooltipText }}"
+  attr.aria-label="{{ tooltipText }}"
   mat-fab
 >
   <mat-icon>
