--- a/src/loading-container/loading-container.html
+++ b/src/loading-container/loading-container.html
@@ -1,13 +1,8 @@
-<div [ngSwitch]="loading">
-  <div *ngSwitchCase="false">
-    <ng-content></ng-content>
+<div *ngIf="!loading">
+  <ng-content></ng-content>
+</div>
+<div *ngIf="loading">
+  <div *ngIf="pastDelay" class="spinner-container">
+    <mat-spinner></mat-spinner>
   </div>
-  <div *ngSwitchCase="true">
-    <div [ngSwitch]="pastDelay">
-      <div *ngSwitchCase="false">
-      </div>
-      <div *ngSwitchCase="true" class="spinner-container">
-        <mat-spinner></mat-spinner>
-      </div>
-    </div>
 </div>
