Chillin with john

--- a/demo-app/app/demo/demo-checkbox/demo-checkbox.html
+++ b/demo-app/app/demo/demo-checkbox/demo-checkbox.html
@@ -1,1 +1,21 @@
-<markdown [content]="notes"></markdown>
+<div id="bodyContainer"><h1><u>Checkboxes</u></h1>
+    <h2>Use</h2>
+    <p>Checkboxes are a type of selection control that allows selecting multiple options from a set. Utilize checkboxes
+        for multiple choice selections and agreement selections. Avoid using checkboxes for selections in which a singular
+        choice is desired.
+        <br>See <a href="https://material.io/guidelines/components/selection-controls.html#selection-controls-checkbox">
+            Material Design Selection Controls</a>
+        and <a href="https://material.angular.io/components/checkbox/overview">Angular Material Checkboxes</a>.
+    </p>
+<h2>Sample</h2>
+<mat-tab-group>
+    <mat-tab label="Component Sample">
+        <div class="tabHeight"> <mat-checkbox>Check me!</mat-checkbox> </div>
+    </mat-tab>
+    <mat-tab label="HTML"><div class="tabHeight">
+        <table style="width:100%">
+            &lt;mat-checkbox&gt;Check me!&lt;/mat-checkbox&gt;<br/>
+        </table>
+    </div></mat-tab>
+</mat-tab-group>
+    <markdown [content]="notes"></markdown></div>
