Migrated components up to Empty State

--- a/demo-app/app/demo/demo-checkbox/demo-checkbox.html
+++ b/demo-app/app/demo/demo-checkbox/demo-checkbox.html
@@ -1,4 +1,4 @@
-<div id="bodyContainer"><h1><u>Checkboxes</u></h1>
+<div id="bodyContainer"><br><h1><u>Checkboxes</u></h1><br>
     <h2>Use</h2>
     <p>Checkboxes are a type of selection control that allows selecting multiple options from a set. Utilize checkboxes
         for multiple choice selections and agreement selections. Avoid using checkboxes for selections in which a singular
@@ -6,7 +6,7 @@
         <br>See <a href="https://material.io/guidelines/components/selection-controls.html#selection-controls-checkbox">
             Material Design Selection Controls</a>
         and <a href="https://material.angular.io/components/checkbox/overview">Angular Material Checkboxes</a>.
-    </p>
+    </p><br>
 <h2>Sample</h2>
 <mat-tab-group>
     <mat-tab label="Component Sample">
