--- a/demo-app/app/demo/demo-card/demo-card.html
+++ b/demo-app/app/demo/demo-card/demo-card.html
@@ -1,12 +1,11 @@
-<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-<div id="bodyContainer"><h1><u>Cards</u></h1>
+<div id="bodyContainer"><br><h1><u>Cards</u></h1><br>
 
 <h2> Use</h2>
 <p>A card is a container for content. Cards are static in size, and should be used to organize data in a fixed position
     on the page where the user wishes to avoid overlap of components and information.
     <br>See <a href="https://material.io/guidelines/components/cards.html">Material Design Components</a> and
     <a href="https://material.angular.io/components/card/overview">Angular Material Cards</a>.</p>
-
+    <br>
 <h2>Sample</h2>
 
 <mat-tab-group>
@@ -88,7 +87,7 @@
         </table>
     </div></mat-tab>
 </mat-tab-group>
-<markdown [content]="notes"></markdown>
+    <markdown [content]="notes"></markdown>
 
 <mat-accordion>
     <mat-expansion-panel>
