--- a/demo-app/app/demo/demo-dialog/demo-dialog-dialog.html
+++ b/demo-app/app/demo/demo-dialog/demo-dialog-dialog.html
@@ -1,5 +1,5 @@
 <div style="width: 100%">
-    <h2>This is a dialog.</h2>
+    <h1>This is a dialog.</h1><br>
     Click 'cancel' to close this dialog.<br><br>
     <button mat-raised-button matDialogClose>Cancel</button>
 </div>
