--- a/demo-app/app/demo/demo-dialog/demo-dialog.html
+++ b/demo-app/app/demo/demo-dialog/demo-dialog.html
@@ -1,4 +1,5 @@
-<div id="bodyContainer"><h1><u>Dialogs</u></h1>
+<div id="bodyContainer"><br><h1><u>Dialogs</u></h1>
+    <br>
     <h2> Use</h2>
     <p>Dialogs inform users about a specific task and may contain critical information, require decisions, or involve
         multiple tasks. Use dialogs to progressively disclose additional information, prompt users to take action or
@@ -7,7 +8,7 @@
         See <a href="https://material.io/guidelines/components/dialogs.html">Material Design Dialogs </a>
         and <a href="https://material.angular.io/components/dialog/overview">Angular Material Dialogs</a>.
     </p>
-
+    <br>
     <h2>Sample</h2>
 
     <mat-tab-group>
@@ -44,3 +45,4 @@
     </mat-tab-group>
     <markdown [content]="notes"></markdown>
 </div>
+
