--- a/demo-app/app/demo/demo-radio-button/demo-radio-button.html
+++ b/demo-app/app/demo/demo-radio-button/demo-radio-button.html
@@ -1,5 +1,5 @@
-<div id="bodyContainer"><h1><u>Radio Buttons</u></h1>
-    <h2>Use</h2>
+<div id="bodyContainer"><br><h1><u>Radio Buttons</u></h1>
+    <br><h2>Use</h2>
     <p>Radio buttons allow the user to select one option from a set. Use radio buttons for exclusive selection if user
         needs to see all available options side-by-side. Otherwise, consider a dropdown, which uses
         less space than displaying all options.
@@ -7,7 +7,7 @@
             Material Design Radio Button</a>
         and <a href="https://material.angular.io/components/radio/overview"> Angular Material Radio Button</a>.
     </p>
-<h2>Sample</h2>
+<br><h2>Sample</h2>
 <mat-tab-group>
     <mat-tab label="Component Sample"><div class="tabHeight">
         <mat-radio-group class="example-radio-group" [(ngModel)]="rowOfRadioButtons">
