Added two more components

--- a/demo-app/app/demo/demo-error-banner/demo-error-banner.html
+++ b/demo-app/app/demo/demo-error-banner/demo-error-banner.html
@@ -7,7 +7,7 @@
     <mat-tab-group>
         <mat-tab label="Component Sample">
             <div class="tabHeight">
-                <ign-error-banner> <button class="dismiss-button" type="button" mat-icon-button (click)="clear()">&times;</button>
+                <ign-error-banner> <button class="dismiss-button" type="button" mat-icon-button>&times;</button>
                     <ul class="message-list">
                         <li>This is an error message.</li>
                         <li>You can add icons like the red x above to clear the message.</li>
@@ -16,14 +16,12 @@
             </div></mat-tab>
         <mat-tab label="HTML"><div class="tabHeight">
             <table style="width:100%">
-                &lt;ign-error-banner> &lt;button class="dismiss-button" type="button" mat-icon-button (click)="clear()"&gt;&times;&lt;/button&gt;<br>
+                &lt;ign-error-banner> &lt;button class="dismiss-button" type="button" mat-icon-button"&gt;&times;&lt;/button&gt;<br>
                 &nbsp;&nbsp;&lt;ul class="message-list"&gt;<br>
                 &nbsp;&nbsp; &nbsp;&nbsp; &lt;li&gt;This is an error message.&lt;/li&gt;<br>
                 &nbsp;&nbsp; &nbsp;&nbsp; &lt;li>You can add icons like the red x above to clear the message.&lt;/li&gt;<br>
                 &nbsp;&nbsp; &nbsp;&nbsp;&lt;li&gt;That one doesn't work, but you can still click it.&lt;/li&gt;<br>
                 &nbsp;&nbsp;&lt;/ul&gt;&lt;/ign-error-banner><br>
-
-                &lt;ign-error-banner&gt;Here is an error message using the error banner component.&lt;/ign-error-banner&gt;
             </table>
         </div></mat-tab>
     </mat-tab-group>
