Added more components

--- a/demo-app/app/demo/demo-nav-list/demo-nav-list.html
+++ b/demo-app/app/demo/demo-nav-list/demo-nav-list.html
@@ -1,6 +1,6 @@
 <div id="bodyContainer"><br><h1><u>Navigation List</u></h1>
     <br><h2> Use</h2>
-    <p> UsUtilize the nav-list component for navigation lists, such as those with anchor tags. Nav-list components'
+    <p> Utilize the nav-list component for navigation lists, such as those with anchor tags. Nav-list components'
     anchor tags can be wrapped in a ign-list-item for multiple links within the list. </p>
 
     <br><h2>Sample</h2>
