--- a/demo-app/app/demo/demo-sidenav/demo-sidenav.html
+++ b/demo-app/app/demo/demo-sidenav/demo-sidenav.html
@@ -1,18 +1,20 @@
-<div id="bodyContainer"><br><h1><u>Footer</u></h1>
+<div id="bodyContainer"><br><h1><u>Sidenav</u></h1>
     <br><h2> Use</h2>
-    <p> Footer components are designed to contain information pertinent to the company, user, or other forms of
-    non-content related navigation.</p>
+    <p> TBA </p>
 
     <br><h2>Sample</h2>
     <mat-tab-group>
         <mat-tab label="Component Sample">
             <div class="tabHeight">
-                I am not a footer.
-                <ign-footer>I am a footer</ign-footer>
+
             </div></mat-tab>
         <mat-tab label="HTML"><div class="tabHeight">
             <table style="width:100%">
-                &lt;ign-footer&gt;I am a footer&lt;/ign-footer&gt;
+                &lt;ign-page&gt;<br>
+                &nbsp;&nbsp;    I'm a page!<br>
+                &nbsp;&nbsp;    You can put anything here!<br>
+                &nbsp;&nbsp;    I'm just a container.<br>
+                &lt;/ign-page&gt;
             </table>
         </div></mat-tab>
     </mat-tab-group>
