--- a/demo-app/app/demo/demo-error-banner/demo-error-banner.html
+++ b/demo-app/app/demo/demo-error-banner/demo-error-banner.html
@@ -16,7 +16,7 @@
             </div></mat-tab>
         <mat-tab label="HTML"><div class="tabHeight">
             <table style="width:100%">
-                &lt;ign-error-banner> &lt;button class="dismiss-button" type="button" mat-icon-button"&gt;&times;&lt;/button&gt;<br>
+                &lt;ign-error-banner&gt; &lt;button class="dismiss-button" type="button" mat-icon-button"&gt;&times;&lt;/button&gt;<br>
                 &nbsp;&nbsp;&lt;ul class="message-list"&gt;<br>
                 &nbsp;&nbsp; &nbsp;&nbsp; &lt;li&gt;This is an error message.&lt;/li&gt;<br>
                 &nbsp;&nbsp; &nbsp;&nbsp; &lt;li>You can add icons like the red x above to clear the message.&lt;/li&gt;<br>
