added icon component, modified css and html

--- a/demo-app/app/demo/demo-date-range/demo-date-range.html
+++ b/demo-app/app/demo/demo-date-range/demo-date-range.html
@@ -1,6 +1,6 @@
 <div id="bodyContainer"><br><h1><u>Date-Range</u></h1>
     <br><h2>Use</h2>
-    The date range component is used to create a pair of date pickers corresponding to the start and end dates of a range.
+    <p>The date range component is used to create a pair of date pickers corresponding to the start and end dates of a range.</p>
 
     <br><br>
     <h2>Sample</h2>
