--- a/demo-app/app/demo/demo-sidenav/demo-sidenav.html
+++ b/demo-app/app/demo/demo-sidenav/demo-sidenav.html
@@ -1,7 +1,10 @@
 <div id="bodyContainer"><br><h1><u>Sidenav</u></h1>
     <br><h2> Use</h2>
     <p> Sidenav components are utilized to act as site navigational windows without the need to open a different page
-    or interrupt the user experience. </p>
+    or interrupt the user experience.
+    <br>See <a href="https://material.angular.io/components/sidenav/overview">
+            Material SideNav</a>
+        and <a href="https://material.io/guidelines/patterns/navigation-drawer.html#">Material Navigation Drawer Patterns</a>.</p>
 
     <br><h2>Sample</h2>
     <mat-tab-group>
