added how to add to doc site, opening navigational links in new tab/window

--- a/demo-app/app/demo/demo-empty-state/demo-empty-state.html
+++ b/demo-app/app/demo/demo-empty-state/demo-empty-state.html
@@ -10,7 +10,7 @@
     <mat-tab-group>
         <mat-tab label="Component Sample">
             <div class="tabHeight">
-                <a [routerLink]="['empty-state-example']">
+                <a [routerLink]="['empty-state-example']" target="_blank">
                     Click Here
                 </a> to go to an example of an empty state page.<br>
                 You'll need to hit the back button to come back!
