--- a/demo-app/app/demo/demo-dialog/demo-dialog.html
+++ b/demo-app/app/demo/demo-dialog/demo-dialog.html
@@ -46,3 +46,109 @@
     <markdown [content]="notes"></markdown>
 </div>
 
+
+<br>
+<h2>Enhanced Dialog</h2>
+<br>
+<button mat-raised-button (click)="openDialogBackgroundSubscription()">Click Me For Enhanced Dialog</button>
+<br>
+<br>
+<mat-accordion>
+    <mat-expansion-panel>
+        <mat-expansion-panel-header>
+            <mat-panel-title><b>
+                Catch Background Clicked
+            </b></mat-panel-title>
+            <mat-panel-description><i>Provides a subscription to a modals background being clicked</i></mat-panel-description>
+        </mat-expansion-panel-header>
+        <mat-tab-group>
+            <mat-tab label="TS"><div class="tabHeight">
+                <table style="width:50%"><p>
+                    let dialogRef = this.dialog.open(DemoDialogComponentDialogBackground, &#123; disableClose: true &#125;);<br><br>
+
+                    Observable.merge(this.dialogRef.backdropClick())<br>
+                    &nbsp;.map(() => &#123;Action&#125;)<br>
+                    &nbsp; &nbsp;.subscribe();
+                </p>
+                </table>
+            </div></mat-tab>
+        </mat-tab-group>
+    </mat-expansion-panel>
+
+    <mat-expansion-panel>
+        <mat-expansion-panel-header>
+            <mat-panel-title><b>
+                Adding Save/Cancel confirmation dialog
+            </b></mat-panel-title>
+            <mat-panel-description><i>Creates a confirmation dialog to confirm an action taken within another dialog</i></mat-panel-description>
+        </mat-expansion-panel-header>
+        <mat-tab-group>
+            <mat-tab label="Main TS"><div class="tabHeight">
+                <table style="width:50%"><p>
+                    dialogRefMain: any; <br>
+
+                    openMainDialog() &#123;<br>
+                    &nbsp; this.dialogRefMain = this.dialog.open(DemoDialogComponentDialogBackground, &#123;disableClose: true&#125;);<br>
+
+                    &nbsp; Observable.merge(this.dialogRefMain.backdropClick())<br>
+                    &nbsp; &nbsp;.map(() => this.openDialogAcceptReject())<br>
+                    &nbsp; &nbsp; &nbsp;.subscribe();<br>
+                    &#125;<br>
+
+                    openDialogAcceptReject(): void &#123;<br>
+                    &nbsp;this.dialog.open(DemoDialogAcceptCancelComponent)<br>
+                    &nbsp; &nbsp;.afterClosed()<br>
+                    &nbsp; &nbsp; &nbsp;.subscribe(response => &#123;<br>
+                    &nbsp; &nbsp; &nbsp; &nbsp;if (response) &#123;<br>
+                    &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;this.dialogRefMain.close()<br>
+                    &nbsp; &nbsp; &nbsp; &nbsp;&#125;;<br>
+                    &nbsp; &nbsp; &#125;);<br>
+                    &#125;<br>
+                </p>
+                </table>
+            </div></mat-tab>
+
+            <mat-tab label="Accept/Reject Dialog TS"><div class="tabHeight">
+                <table style="width:50%"><p>
+
+
+                    import &#123; Component &#125; from '@angular/core';<br>
+                    import &#123; MatDialogRef &#125; from '@angular/material';<br>
+
+                    @Component(&#123;<br>
+                    &nbsp;selector: 'ign-dialog-cancel',<br>
+                    &nbsp;templateUrl: './dialog-accept-cancel.component.html'<br>
+                    &#125;)<br>
+                    export class DemoDialogAcceptCancelComponent &#123;<br>
+
+                    &nbsp;constructor(<br>
+                    &nbsp;&nbsp;public dialogRef: MatDialogRef&lt;DemoDialogAcceptCancelComponent&gt;) &#123; &#125;<br>
+
+                    &nbsp;//Passes data from this modal back to an onclose subscriber of the original modal<br>
+                    &nbsp;onExitClick(data): void &#123;<br>
+                    &nbsp;&nbsp;this.dialogRef.close(data);<br>
+                    &nbsp;&#125;<br>
+                    &#125;<br>
+
+                </p>
+                </table>
+            </div></mat-tab>
+
+            <mat-tab label="Accept/Reject Dialog HTML"><div class="tabHeight">
+                <table style="width:50%"><p>
+
+                    &lt;div mat-dialog-content&gt;<br>
+                    &nbsp; &lt;p&gt;You have clicked outside the modal. Does this mean you want to exit?&lt;/p&gt;<br>
+                    &lt;/div&gt;<br>
+                    &lt;div mat-dialog-actions align="end"&gt;<br>
+                    &nbsp;&lt;button mat-button (click)="onExitClick(true)"&gt;Yes&lt;/button&gt;<br>
+                    &nbsp;&lt;button mat-button color="accent" (click)="onExitClick(false)"&gt;No&lt;/button&gt;<br>
+                    &lt;/div&gt;
+
+                </p>
+                </table>
+            </div></mat-tab>
+        </mat-tab-group>
+    </mat-expansion-panel>
+
+</mat-accordion>
