minimized individual css needs, rollback font styling, matched to web app structure FOR DOC SITE

--- a/demo-app/app/demo/demo-accessibility/demo-accessibility.html
+++ b/demo-app/app/demo/demo-accessibility/demo-accessibility.html
@@ -1,4 +1,4 @@
-<div id="bodyContainer"><br><h1><u>Accessibility</u></h1>
+<div id="body-container"><br><h1>Accessibility</h1>
     <br><h2> Use</h2>
     <p> The accessibility directive is used to assist those who require accessibility features while using their
         computers. </p>
