--- a/demo-app/app/demo/demo-center/demo-center.html
+++ b/demo-app/app/demo/demo-center/demo-center.html
@@ -1,4 +1,4 @@
-<div id="bodyContainer"><br><h1><u>Center</u></h1>
+<div id="body-container"><br><h1>Center</h1>
     <br><h2> Use</h2>
     <p>The center component is used for aligning other components into the center of the parent element.</p>
 
