--- a/demo-app/app/demo/demo-checkbox/demo-checkbox.html
+++ b/demo-app/app/demo/demo-checkbox/demo-checkbox.html
@@ -1,4 +1,4 @@
-<div id="bodyContainer"><br><h1><u>Checkboxes</u></h1><br>
+<div id="body-container"><br><h1>Checkboxes</h1><br>
     <h2>Use</h2>
     <p>Checkboxes are a type of selection control that allows selecting multiple options from a set. Utilize checkboxes
         for multiple choice selections and agreement selections. Avoid using checkboxes for selections in which a singular
