--- a/demo-app/app/demo/demo-dialog/demo-dialog.html
+++ b/demo-app/app/demo/demo-dialog/demo-dialog.html
@@ -1,4 +1,4 @@
-<div id="bodyContainer"><br><h1><u>Dialogs</u></h1>
+<div id="body-container"><br><h1>Dialogs</h1>
     <br>
     <h2> Use</h2>
     <p>Dialogs inform users about a specific task and may contain critical information, require decisions, or involve
