--- a/demo-app/app/demo/demo-divider/demo-divider.html
+++ b/demo-app/app/demo/demo-divider/demo-divider.html
@@ -1,4 +1,4 @@
-<div id="bodyContainer"><br><h1><u>Divider</u></h1>
+<div id="body-container"><br><h1>Divider</h1>
     <br><h2> Use</h2>
     <p>The divider component serves to distinctly separate content.</p>
 
