--- a/demo-app/app/demo/demo-empty-state/demo-empty-state.html
+++ b/demo-app/app/demo/demo-empty-state/demo-empty-state.html
@@ -1,4 +1,4 @@
-<div id="bodyContainer"><br><h1><u>Empty State</u></h1>
+<div id="body-container"><br><h1>Empty State</h1>
     <br><h2> Use</h2>
     <p>Empty state is used when a user encounter a resource page or a page of resources he/she has not yet
         created/encountered. Empty state is composed of multiple empty state styled specific components. It is up to the
