--- a/demo-app/app/demo/demo-error-banner/demo-error-banner.html
+++ b/demo-app/app/demo/demo-error-banner/demo-error-banner.html
@@ -1,4 +1,4 @@
-<div id="bodyContainer"><br><h1><u>Error Banner</u></h1>
+<div id="body-container"><br><h1>Error Banner</h1>
     <br><h2> Use</h2>
     <p> Error banner components are used to display error messages to the front end in order to notify users that there
     was a problem processing a command.</p>
