--- a/demo-app/app/demo/demo-expandable-fab/demo-expandable-fab.html
+++ b/demo-app/app/demo/demo-expandable-fab/demo-expandable-fab.html
@@ -1,4 +1,4 @@
-<div id="bodyContainer"><br><h1><u>Expandable Floating Action Buttons (FAB's)</u></h1>
+<div id="body-container"><br><h1>Floating Action Buttons</h1>
     <br><h2> Use</h2>
     <p>Expandable Fab (floating action button) is composed of two parts:</p>
     <ul>
