--- a/demo-app/app/demo/demo-field/demo-field.html
+++ b/demo-app/app/demo/demo-field/demo-field.html
@@ -1,4 +1,4 @@
-<div id="bodyContainer"><br><h1><u>Field</u></h1>
+<div id="body-container"><br><h1>Field</h1>
     <br><h2> Use</h2>
     <p>This component displays a view field, consisting of a label and a value. </p>
 
