--- a/demo-app/app/demo/demo-footer/demo-footer.html
+++ b/demo-app/app/demo/demo-footer/demo-footer.html
@@ -1,4 +1,4 @@
-<div id="bodyContainer"><br><h1><u>Footer</u></h1>
+<div id="body-container"><br><h1>Footer</h1>
     <br><h2> Use</h2>
     <p> Footer components are designed to contain information pertinent to the company, user, or other forms of
     non-content related navigation.</p>
