--- a/demo-app/app/demo/demo-hub-card/demo-hub-card.html
+++ b/demo-app/app/demo/demo-hub-card/demo-hub-card.html
@@ -1,4 +1,4 @@
-<div id="bodyContainer"><br><h1><u>Hub Card</u></h1>
+<div id="body-container"><br><h1>Hub Card</h1>
     <br><h2> Use</h2>
     <p> Hub Card components are used as navigational, aesthetically pleasing cards that house the hyperlinks to other
         pages within the same user's experience. </p>
