--- a/demo-app/app/demo/demo-info-banner/demo-info-banner.html
+++ b/demo-app/app/demo/demo-info-banner/demo-info-banner.html
@@ -1,4 +1,4 @@
-<div id="bodyContainer"><br><h1><u>Info Banner</u></h1>
+<div id="body-container"><br><h1>Info Banner</h1>
     <br><h2> Use</h2>
     <p> The info banner component is used to display messages on the front end to users, notifying the user when a
     request was completed or submitted without error. </p>
