--- a/demo-app/app/demo/demo-list-content/demo-list-content.html
+++ b/demo-app/app/demo/demo-list-content/demo-list-content.html
@@ -1,4 +1,4 @@
-<div id="bodyContainer"><br><h1><u>List</u></h1>
+<div id="body-container"><br><h1>List</h1>
     <br><h2>Use</h2>
     <p> List components are used for a large selection of content that is individualized based on the users' needs. List
     components consist of a list view with summarized information and a content view, which provides more information on the respective
@@ -79,7 +79,7 @@
     <markdown [content]="notes"></markdown></div>
 <br>
 <h2>List Components</h2>
-<mat-accordion>
+<mat-accordion id = "accordion">
     <mat-expansion-panel>
         <mat-expansion-panel-header>
             <mat-panel-title><b>
