--- a/demo-app/app/demo/demo-loading-container/demo-loading-container.html
+++ b/demo-app/app/demo/demo-loading-container/demo-loading-container.html
@@ -1,4 +1,4 @@
-<div id="bodyContainer"><br><h1><u>Loading Container</u></h1>
+<div id="body-container"><br><h1>Loading Container</h1>
     <br><h2> Use</h2>
     <p> Loading container is a wrapper (higher level) component around your content. It will show a spinner after a
         period (right now 400ms) until the consumer declares the content loaded. Most developers needing to consume
