--- a/demo-app/app/demo/demo-radio-button/demo-radio-button.html
+++ b/demo-app/app/demo/demo-radio-button/demo-radio-button.html
@@ -1,4 +1,4 @@
-<div id="bodyContainer"><br><h1><u>Radio Buttons</u></h1>
+<div id="body-container"><br><h1>Radio Buttons</h1>
     <br><h2>Use</h2>
     <p>Radio buttons allow the user to select one option from a set. Use radio buttons for exclusive selection if user
         needs to see all available options side-by-side. Otherwise, consider a dropdown, which uses
@@ -27,8 +27,7 @@
         <table style="width:25%">
             rowOfRadioButtons: string;<br><br/>
             &nbsp;buttons = [<br/>
-            &nbsp;&nbsp; 'I AM A BUTTON,<br>
-            &nbsp;&nbsp; 'CLICK ON ME !',
+            &nbsp;&nbsp; 'I AM A BUTTON',<br>
             &nbsp; ];
         </table>
     </div></mat-tab>
