--- a/demo-app/app/demo/demo-right-drawer/demo-right-drawer.html
+++ b/demo-app/app/demo/demo-right-drawer/demo-right-drawer.html
@@ -1,4 +1,4 @@
-<div id="bodyContainer"><br><h1><u>Right Drawer</u></h1>
+<div id="body-container"><br><h1>ight Drawer</h1>
     <br><h2> Use</h2>
     <p> Right drawer components are used to display summarized information and navigational linkage to other pages
     and components when a selected item is clicked on.</p>
