--- a/demo-app/app/demo/demo-select-container/demo-select-container.html
+++ b/demo-app/app/demo/demo-select-container/demo-select-container.html
@@ -1,4 +1,4 @@
-<div id="bodyContainer"><br><h1><u>Select Container</u></h1>
+<div id="body-container"><br><h1>Select Container</h1>
     <br><h2> Use</h2>
     <p> TBA</p>
 
