--- a/demo-app/app/demo/demo-sidenav/demo-sidenav.html
+++ b/demo-app/app/demo/demo-sidenav/demo-sidenav.html
@@ -1,4 +1,4 @@
-<div id="bodyContainer"><br><h1><u>Sidenav</u></h1>
+<div id="body-container"><br><h1>Sidenav</h1>
     <br><h2> Use</h2>
     <p> Sidenav components are utilized to act as site navigational windows without the need to open a different page
     or interrupt the user experience.
