--- a/demo-app/app/demo/demo-date-range/demo-date-range.html
+++ b/demo-app/app/demo/demo-date-range/demo-date-range.html
@@ -1,4 +1,4 @@
-<div id="bodyContainer"><br><h1><u>Date-Range</u></h1>
+<div id="body-container"><br><h1>Date-Range</h1>
     <br><h2>Use</h2>
     <p>The date range component is used to create a pair of date pickers corresponding to the start and end dates of a range.</p>
 
