--- a/demo-app/app/demo/demo-form/demo-form.html
+++ b/demo-app/app/demo/demo-form/demo-form.html
@@ -1,4 +1,4 @@
-<div id="bodyContainer"><br><h1><u>Form</u></h1>
+<div id="body-container"><br><h1>Form</h1>
     <br><h2> Use</h2>
     <p>Forms are components used to house, select, and submit multiple sets of content within one sitting.</p>
 
