--- a/demo-app/app/demo/demo-icon/demo-icon.html
+++ b/demo-app/app/demo/demo-icon/demo-icon.html
@@ -1,4 +1,4 @@
-<div id="bodyContainer"><br><h1><u>Icon</u></h1><br>
+<div id="body-container"><br><h1>Icon</h1><br>
     <h2>Use</h2>
     <p>The icon component makes it easier to use vector-based icons. Material icons use geometric shapes to visually
         represent core ideas, capabilities, or topics.
@@ -21,7 +21,7 @@
     </mat-tab-group>
     <markdown [content]="notes"></markdown></div>
 
-<mat-accordion>
+<mat-accordion id = "accordion">
     <mat-expansion-panel>
         <mat-expansion-panel-header>
             <mat-panel-title><b>
