--- a/demo-app/app/demo/demo-page/demo-page.html
+++ b/demo-app/app/demo/demo-page/demo-page.html
@@ -1,4 +1,4 @@
-<div id="bodyContainer"><br><h1><u>Page</u></h1>
+<div id="body-container"><br><h1>Page</h1>
     <br><h2> Use</h2>
     <p> Utilize the page component to act as a container for cards and content on the page.</p>
 
