--- a/demo-app/app/demo/demo-dialog/demo-dialog-dialog.html
+++ b/demo-app/app/demo/demo-dialog/demo-dialog-dialog.html
@@ -1,4 +1,4 @@
-<div style="width: 100%">
+<div>
     <h1>This is a dialog.</h1><br>
     Click 'cancel' to close this dialog.<br><br>
     <button mat-raised-button matDialogClose>Cancel</button>
