--- a/demo-app/app/demo/demo-dialog/demo-dialog.html
+++ b/demo-app/app/demo/demo-dialog/demo-dialog.html
@@ -50,9 +50,6 @@
 <br>
 <h2>Enhanced Dialog</h2>
 <br>
-<button mat-raised-button (click)="openDialogBackgroundSubscription()">Click Me For Enhanced Dialog</button>
-<br>
-<br>
 <mat-accordion>
     <mat-expansion-panel>
         <mat-expansion-panel-header>
@@ -62,6 +59,10 @@
             <mat-panel-description><i>Provides a subscription to a modals background being clicked</i></mat-panel-description>
         </mat-expansion-panel-header>
         <mat-tab-group>
+            <mat-tab label="Content Sample"><div class="tabHeight">
+                <button mat-raised-button (click)="openDialogBackgroundSubscription()">Click Me For Enhanced Dialog</button>
+            </div></mat-tab>
+
             <mat-tab label="TS"><div class="tabHeight">
                 <table style="width:50%"><p>
                     let dialogRef = this.dialog.open(DemoDialogComponentDialogBackground, &#123; disableClose: true &#125;);<br><br>
