Added documentation for making dialog height responsive
adding how to for documentation as well as placeholder for automation

Added markdown component

--- a/demo-app/app/welcome/welcome.html
+++ b/demo-app/app/welcome/welcome.html
@@ -1,11 +1,16 @@
 <ign-center><h2>Hello! You've stumbled upon the NU team's doc site. </h2>
     <p>This is where we store our components that can be universally utilized within the web app. This helps to improve consistency,
-        writability, and readability in code across the board!</p>
+    writability, and readability in code across the board!</p>
     <p>Click on the hamburger menu icon to begin navigating to our components. You can consume these components and use
-        them in your own development!</p></ign-center>
+    them in your own development!</p></ign-center>
+
 <h2><u><b>Adding to the Doc Site</b></u></h2>
 
-<p>Below are the requirements to add to the doc site. Please read these instructions thoroughly and mind our restrictions!</p>
+<p><li>If you would like to use the automated documentation to add to the doc site, TBA. You can use this feature for
+    out of the box angular material components and subcomponents or custom components and subcomponentgit .</li> </p>
+<b><p>OR</p></b>
+<p><li>Below are the requirements to add to the doc site, if you choose to do so manually. Please read these instructions
+    thoroughly and mind our restrictions!</li></p>
 
 <h3>How to Add Your Own Component:</h3>
 
