--- a/demo-app/app/slackbot-dialog.html
+++ b/demo-app/app/slackbot-dialog.html
@@ -9,6 +9,8 @@
                     <input formControlName = "question" matInput placeholder="What is your question?">
                 </mat-form-field>
             </ign-center>
-            <ign-center><button mat-button mat-raised-button type="submit" color="accent" (click)="passInformation()">
+            <ign-center>
+                <button mat-button mat-raised-button type="submit" color="accent"
+                        (click)="passInformation()">
                 Submit</button></ign-center>
         </form>
