--- a/demo-app/app/demo/demo-contribution/demo-contribution.html
+++ b/demo-app/app/demo/demo-contribution/demo-contribution.html
@@ -1,7 +1,11 @@
 <h2><u><b>Adding to the Doc Site</b></u></h2>
 
-<p><li>If you would like to use the automated documentation to add to the doc site, TBA. You can use this feature for
-    out of the box angular material components and subcomponents or custom components and subcomponentgit .</li> </p>
+<p><li>If you would like to use the automated documentation to add to the doc site, run the following from the terminal: <ul><li>npm install 
+    --registry=http://artifactory.mia.ulti.io/artifactory/api/npm/npm generator-ign</li></ul> </li>
+    <li>After installing the package, run the following from the terminal: <ul><li>yo ign</li></ul></li>
+    <li>This package allows for semi-automatic generation of component documentation. Just check the output and push to the repository!</li>
+    <li>You can use this feature for out of the box angular material components and subcomponents or custom components and subcomponents.</li>
+    </p>
 <b><p>OR</p></b>
 <p><li>Below are the requirements to add to the doc site, if you choose to do so manually. Please read these instructions
     thoroughly and mind our restrictions!</li></p>
